manifests/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-server1
  labels:
    app: express-server1
spec:
  ports:
  - port: 3000
    protocol: TCP
  clusterIP: None
  selector:
    app: express-server1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-express1-localhost
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: demo-express1.localdev.me
    http:
      paths:
      - backend:
          service:
            name: express-server1
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-server1
  namespace: dev
  labels:
    app: express-server1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-server1
  template:
    metadata:
      labels:
        app: express-server1
    spec:
      containers:
      - name: express-server1
        image: guetaamit/app
