manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-express1-localhost
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: demo-express1.localdev.me
    http:
      paths:
      - backend:
          service:
            name: express-server1
            port:
              number: 3000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
